[JPS] Add new --add-opens for tests
^KT-74494 In Progress